--- a/app/scripts/templates/column-editor.ejs
+++ b/app/scripts/templates/column-editor.ejs
@@ -1,3 +1,5 @@
 <input class="input_title" type="text" value="<%= title %>"/>
-<button class="btn btn-primary btn_save_column">Save</button>
-<button class="btn btn_cancel_column">&times;</button>
+<span class="btns">
+	<button class="btn btn-sm btn-primary btn_save_column">Save</button>
+	<button class="btn btn-sm btn_cancel_column">&times;</button>
+</span>
