--- a/app/scripts/templates/task-li.ejs
+++ b/app/scripts/templates/task-li.ejs
@@ -1,2 +1,2 @@
-<div class="content"><%= content %></div><button class="btn btn-small btn-danger btn_delete">&times;</button>
+<div class="content"><%= content %></div><button class="btn btn-xs btn_delete">&times;</button>
 
