--- a/app/scripts/templates/column.ejs
+++ b/app/scripts/templates/column.ejs
@@ -1,4 +1,6 @@
+<button class="btn btn-xs btn_delete_column">&times;</button>
 <div class="title"><%= title %></div>
 <div class="tasks"></div>
-<button class="btn btn-primary btn_add_task">Add task</button>
-<button class="btn btn-danger btn_delete_column">Delete column</button>
+<button class="btn btn-xs btn_json">toJSON</button>
+<button class="btn btn-xs btn-primary btn_add_task">Add task</button>
+
