--- a/app/scripts/templates/task-editor.ejs
+++ b/app/scripts/templates/task-editor.ejs
@@ -1,3 +1,5 @@
-<textarea class="input_content"></textarea>
-<button class="btn btn-primary btn_save_column">Save</button>
-<button class="btn btn_cancel_column">&times;</button>
+<textarea class="input_content"><%= content %></textarea>
+<div class="btns">
+	<button class="btn btn-xs btn-primary btn_save_task">Save</button>
+	<button class="btn btn-xs btn_cancel_task">&times;</button>	
+</div>
